app/assets/stylesheets/components/forms/_form_widgets.css.sass
.form-field
  .search-field
    width: 100%
    margin-top: 1px
    height: 35px

.results
  +stretch-x(15px, 54px)
  font-size: 10px
  margin-right: 17%
  margin-bottom: 20px
  z-index: 10
  background: white
  background: rgba(255,255,255,0.96)
  border: 1px solid shade(#FFFFFF, 10)
  +box-shadow(0 2px 6px rgba(0,0,0,0.1))
  +border-radius(0 0 3px 3px)
  ul
    +plain-list
  .selected
    background-color: $result-list-highlight


.cf-object-editor
  textarea
    font-family: "Andale mono", "Monaco", monospace
    white-space: pre
    word-wrap: normal
    overflow-x: scroll
    &.ng-invalid-json
      border-color: red
  span
    position: relative
    top: 1px
  .ss-alert
    position: relative
    top: 1px

.cf-location-editor
  position: relative
  .invalid-location-warning
    background-color: rgba(255,255,255,0.9)
    text-align: center
    position: absolute
    top: 0
    .text
      width: 30%
      margin: auto
      margin-top: 110px
      font-size: 12px
      background-color: white
      +box-shadow(0 0 20px 12px white)
  .location-picker
    position: relative
  .cf-field-alert
    position: absolute
    top: 20px
    right: 20px

  .results
    overflow-y: auto
    max-height: 200px
    right: 37px
    li
      padding: 5px 10px
      border-bottom: 1px solid $light-rule
      cursor: pointer
      &:hover
        background-color: $result-list-highlight
    .address
      display: block
      margin-bottom: 4px
    .lat,
    .lon
      font-size: 0.8em
      display: inline-block
      width: 12em
      color: $light-gray
  .search
    margin-bottom: 10px

.cf-number-editor
  position: relative
  .cf-field-alert
    position: absolute
    top: 0
    right: 10px
    line-height: 35px

.data-field-boolean .form-controls,
.data-field-string-list .form-controls
  label
    width: auto
    position: relative
    top: -2px
  span
    position: relative
    top: 2px

.data-field-boolean .form-controls
  padding-top: 10px

.data-field-array
  .links 
    +plain-list
    border-top: 1px solid $light-rule
    margin-bottom: 15px
    li
      padding: 10px 7px
      border-bottom: 1px solid $light-rule
  .ss-delete
    @extend %delete-icon
    float: right
    margin-top: 1px
    margin-right: 3px

